--- a/dev/system/layer/auth/locales/pages/login/ja.yml
+++ b/dev/system/layer/auth/locales/pages/login/ja.yml
@@ -5,15 +5,13 @@ pages:
       email:
         label: メールアドレス
         placeholder: meower@example.com
-        error:
           not_verified: そのユーザは認証されていません
-          not_found: ユーザが見つかりません
       password:
         label: パスワード
-        error:
-          wrong: パスワードが違います
       button:
         submit: 送信
+      error:
+        failed: ログインに失敗しました
     button:
       signup: サインアップ
       resend_verify_code: 認証コード再送信
